opam-version: "2.0"
name: "ocaml-unikraft-arm64"
version: "0.0.1"
synopsis: "OCaml cross-compiler to the freestanding Unikraft arm64 backends"
description:
  "This package provides a OCaml cross-compiler, suitable for linking with a Unikraft arm64 unikernel."
maintainer: "samuel@tarides.com"
authors: "Samuel Hym"
license: ["MIT" "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"]
depends: [
  "ocaml" {= "5.2.0"}
  "ocaml-unikraft-toolchain-arm64"
  "ocamlfind"
]
build: [
  [
    make
    "-j%{jobs}%"
    "prefix=%{prefix}%"
    "BIN=%{bin}%"
    "LIB=%{lib}%"
    "SHARE=%{share}%"
    "TGTARCH=arm64"
    "compiler"
  ]
  [
    make
    "-j%{jobs}%"
    "prefix=%{prefix}%"
    "BIN=%{bin}%"
    "LIB=%{lib}%"
    "SHARE=%{share}%"
    "TGTARCH=arm64"
    "%{name}%.install"
  ]
]
extra-source "ocaml-src.tar.gz" {
  src: "https://github.com/ocaml/ocaml/archive/5.2.0.tar.gz"
  checksum:
    "sha256=48554abfd530fcdaa08f23f801b699e4f74c320ddf7d0bd56b0e8c24e55fc911"
}
