opam-version: "2.0"
name: "ocaml-unikraft-backend-qemu-x86_64"
version: "0.17.0"
synopsis: "QEMU/x86_64 Unikraft backend for OCaml"
maintainer: "samuel@tarides.com"
authors: ["Samuel Hym" "Unikraft contributors"]
license: ["MIT" "BSD-3-Clause" "GPL-2.0-only"]
depends: [
  "unikraft" {= "0.17.0+fix"}
]
build: [
  [
    make
    "-j%{jobs}%"
    "UNIKRAFT=%{lib}%/unikraft"
    "PLAT=qemu"
    "TGTARCH=x86_64"
    "backend"
  ]
  [make "PLAT=qemu" "TGTARCH=x86_64" "%{name}%.install"]
]
extra-source "lib-musl.tar.gz" {
  src:
    "https://github.com/unikraft/lib-musl/archive/refs/tags/RELEASE-0.17.0.tar.gz"
  checksum:
    "sha256=d0f44df097122f65f53325b0d1848fe20929b4b9156c2621c7c1bc8cd66afdef"
}
extra-source "musl-1.2.3.tar.gz" {
  src: "https://www.musl-libc.org/releases/musl-1.2.3.tar.gz"
  checksum:
    "sha256=7d5b0b6062521e4627e099e4c9dc8248d32a30285e959b7eecaa780cf8cfd4a4"
}
extra-source "lib-lwip.tar.gz" {
  src:
    "https://github.com/unikraft/lib-lwip/archive/refs/tags/RELEASE-0.17.0.tar.gz"
  checksum:
    "sha256=f90cce7a53f6ad093d1692bb95dd12294148f817a7088e4c981092a76513ad04"
}
extra-source "lwip-UNIKRAFT-2_1_x.zip" {
  src:
    "https://github.com/unikraft/fork-lwip/archive/refs/heads/UNIKRAFT-2_1_x.zip"
  checksum:
    "sha256=1cf15ac8a70946f49327cfa4bc6923555b8c4ceeb11e4dc4f20e530b674403af"
}
pin-depends: [
  ["unikraft.0.17.0+fix" "git+https://github.com/shym/unikraft.git#66bab9efad04cc4298755f04278b36c6ec353867"]
]
