opam-version: "2.0"
name: "ocaml-unikraft-default-arm64"
version: "0.0.1"
synopsis: "OCaml default cross-compiler to the freestanding Unikraft arm64 backends"
description:
  "This package provides a OCaml cross-compiler, suitable for linking with a Unikraft arm64 unikernel, as the default `unikraft` ocamlfind toolchain."
maintainer: "samuel@tarides.com"
authors: "Samuel Hym"
license: ["MIT"]
depends: [
  "ocaml-unikraft-arm64"
  "ocamlfind"
]
build: [
  [make "prefix=%{prefix}%" "TGTARCH=arm64" "_build/unikraft.conf"]
  [make "prefix=%{prefix}%" "TGTARCH=arm64" "%{name}%.install"]
]
conflict-class: "ocaml-unikraft-default"
