opam-version: "2.0"
name: "ocaml-unikraft-default-x86_64"
version: "0.0.1"
synopsis: "OCaml default cross-compiler to the freestanding Unikraft x86_64 backends"
description:
  "This package provides a OCaml cross-compiler, suitable for linking with a Unikraft x86_64 unikernel, as the default `unikraft` ocamlfind toolchain."
maintainer: "samuel@tarides.com"
authors: "Samuel Hym"
license: ["MIT"]
depends: [
  "ocaml-unikraft-x86_64"
  "ocamlfind"
]
build: [
  [make "prefix=%{prefix}%" "TGTARCH=x86_64" "_build/unikraft.conf"]
  [make "prefix=%{prefix}%" "TGTARCH=x86_64" "%{name}%.install"]
]
conflict-class: "ocaml-unikraft-default"
