opam-version: "2.0"
name: "ocaml-unikraft-toolchain-arm64"
version: "0.0.1"
synopsis:
  "C toolchain to build an OCaml cross-compiler to the freestanding Unikraft arm64 backends"
description:
  "This package provides a C toolchain to build an OCaml cross-compiler, suitable for linking with a Unikraft arm64 unikernel."
maintainer: "samuel@tarides.com"
authors: "Samuel Hym"
license: "MIT"
depends: [
  "ocaml-unikraft-backend-qemu-arm64" | "ocaml-unikraft-backend-fc-arm64"
]
build: [
  [make "-j%{jobs}%" "LIB=%{lib}%" "SHARE=%{share}%" "TGTARCH=arm64" "toolchain"]
  [make "LIB=%{lib}%" "SHARE=%{share}%" "TGTARCH=arm64" "%{name}%.install"]
]
