opam-version: "2.0"
name: "ocaml-unikraft-toolchain-x86_64"
version: "0.0.1"
synopsis:
  "C toolchain to build an OCaml cross-compiler to the freestanding x86_64 backends"
description:
  "This package provides a C toolchain to build an OCaml cross-compiler, suitable for linking with a Unikraft x86_64 unikernel."
maintainer: "samuel@tarides.com"
authors: "Samuel Hym"
license: "MIT"
depends: [
  "ocaml-unikraft-backend-qemu-x86_64" | "ocaml-unikraft-backend-fc-x86_64"
]
build: [
  [make "-j%{jobs}%" "LIB=%{lib}%" "SHARE=%{share}%" "TGTARCH=x86_64" "toolchain"]
  [make "LIB=%{lib}%" "SHARE=%{share}%" "TGTARCH=x86_64" "%{name}%.install"]
]
