opam-version: "2.0"
name: "ocaml-unikraft"
version: "0.0.1"
synopsis: "Virtual package to install one of the OCaml default cross-compilers to the freestanding Unikraft backends"
description:
  "This virtual package ensures that an OCaml cross-compiler is available for linking with a Unikraft unikernel as the default `unikraft` ocamlfind toolchain. Explicitly choose one among the ocaml-unikraft-default-* packages to control which one is actually installed."
maintainer: "samuel@tarides.com"
authors: "Samuel Hym"
license: "MIT"
depends: [
  "ocaml-unikraft-default-x86_64" | "ocaml-unikraft-default-arm64"
]
